--- a/package.json
+++ b/package.json
@@ -28,12 +28,23 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "jest": "^27.5.1",
     "prettier": "^2.5.1",
-    "supertest": "^6.2.2",
+    "supertest": "^6.2.4",
     "ts-jest": "^27.1.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.5"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "@dotenv/dotenv": "^0.1.0",
+    "@jest/types": "^28.1.3",
+    "@typegoose/typegoose": "^9.10.1",
+    "dotenv": "^16.0.1",
+    "dto-mapping": "^1.1.0",
+    "express": "^4.17.2",
+    "mongodb": "^4.8.1",
+    "morgan": "^1.10.0",
+    "redis": "^4.2.0",
+    "reflect-metadata": "^0.1.13",
+    "typedi": "^0.10.0",
+    "winston": "^3.8.1"
   }
 }
