--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@dotenv/dotenv": "^0.1.0",
     "@jest/types": "^28.1.3",
     "@typegoose/typegoose": "^9.10.1",
+    "class-validator": "^0.13.2",
     "dotenv": "^16.0.1",
     "dto-mapping": "^1.1.0",
     "express": "^4.17.2",
